Fix z-index banner inferior.
Fix z-index fondo del popup.

--- a/app/Portal.Consultoras.Web/Content/Css/Site/ShowRoom.css
+++ b/app/Portal.Consultoras.Web/Content/Css/Site/ShowRoom.css
@@ -8,7 +8,7 @@
     overflow: hidden;
     position: fixed;
     width: 100%;
-    z-index: 1500;
+    z-index: 1001;
 }
 
 .showroom_banner_img {
